# mercadona-scrapper

./: README.md  __main__.py  pyproject.toml
app/: mercadona_scrapper.py
